--- a/css1/project1.css
+++ b/css1/project1.css
@@ -1,7 +1,13 @@
 body{
     margin: 0px;
     padding: 0px;
-    /* background-color: aquamarine; */
+}
+nav{
+    position: fixed;
+    top:0px;
+    width: 100%;
+    z-index: 1;
+    box-shadow: 1px 4px 10px lightgrey;
 }
 .upper{
     height: 30px;
@@ -175,6 +181,11 @@ padding: 20px;
     font-size: 20px;
 
 }
+.one2{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
 .two{
     width: 200px;
 
@@ -205,18 +216,21 @@ padding: 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(250,250,250);
     
 }
 .a1{
     font-size: 40px;
+    font-weight: 700;
     padding: 20px;
 }
 .a2{
     width: 600px;
+    text-align: center;
 }
 .bigbox{
     height: 500px;
-    background-color: yellow;
+    background-color: rgb(250,250,250);
     display: flex;
     flex-direction: row;
     padding: 20px;
@@ -224,19 +238,165 @@ padding: 20px;
     gap: 30px;
 }
 .smallbox1{
+    /* border: 2px solid red ; */
   height: 450px;
   width:380px ;
-  background-color: aquamarine;  
-  
+  background-color:rgb(255,255,255); 
+   }
 
-}
+   .bigimg1{
+    height:250px;
+    background-image: url(../pics/ben-white-83tkHLPgg2Q-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+   }
 .smallbox2{
     height: 450px;
     width:380px ;
-    background-color: red;  
+    background-color: rgb(255,255,255);
+    /* border: 2px solid red; */
+  }
+  .bigimg2{
+    height:250px;
+    background-image: url(../pics/doug-linstedt-jEEYZsaxbH4-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
   }
   .smallbox3{
+    /* border: 2px solid red; */
+    background-color: rgb(255,255,255);
     height: 450px;
     width:380px ;
-    background-color: green;  
   }
+
+  .bigimg3{
+    height:250px;
+    background-image: url(../pics/friends.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .lowtextone{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;  
+    gap: 10px;
+  }
+  .st{
+    font-size: 20px;
+    font-weight: 800;
+  }
+  .mr{
+    font-weight: 500;
+  }
+  .bottomone{
+    border: 2px solid gainsboro;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+align-items: center;
+    height: 40px;
+    width: 300px;
+    background-color: white;
+    gap: 5px;
+  }
+  .aa{ 
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+
+  }
+.ab{
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+}
+.ac{
+    margin-left: 30px;
+    font-size: 25px;
+    font-weight:700 ;
+    color: aqua;
+}
+.dma{
+    font-size: 20px;
+    font-weight: 800;
+}
+.ms{
+    font-weight: 600;
+}
+.ba{ 
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+
+  }
+.bb{
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+}
+.bc{
+    margin-left: 30px;
+    font-size: 25px;
+    font-weight:700 ;
+    color: aqua;
+}
+.lowtexttwo{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;  
+    gap: 10px;
+  }
+  .sas{
+    font-size: 20px;
+    font-weight: 800;
+  }
+  .lowtextthree{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;  
+    gap: 10px;
+  }
+  .ca{ 
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+
+  }
+.cb{
+    height:30px ;
+    width: 30px;
+    border-radius: 30px;
+    background-color: blue;
+}
+.cc{
+    margin-left: 30px;
+    font-size: 25px;
+    font-weight:700 ;
+    color: aqua;
+}
+.viewcource{
+ height: 40px;
+ width: 200px;
+ font-size: 20px;
+background-color: red;
+/* margin-left: 550px; */
+/* margin-top: 100px; */
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+.outerviewcource{
+    height: 100px;
+    background-color: rgb(250,250,250);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
