--- a/css1/project1.css
+++ b/css1/project1.css
@@ -378,13 +378,13 @@ align-items: center;
     margin-left: 30px;
     font-size: 25px;
     font-weight:700 ;
-    color: aqua;
+    color:  rgb(20,189,238);
 }
 .viewcource{
  height: 40px;
  width: 200px;
  font-size: 20px;
-background-color: red;
+background-color: rgb(20,189,238);
 /* margin-left: 550px; */
 /* margin-top: 100px; */
 display: flex;
@@ -399,4 +399,102 @@ justify-content: center;
     align-items: center;
     justify-content: center;
 
+}
+.middle{
+    height: 400px;
+    background-color: rgb(65,71,91);
+    display: flex;
+    flex-direction: row;
+
+}
+.reg{
+    font-size: 20px;
+
+}
+.belowreg{
+    width: 300px;
+}
+.middleleft{
+    width:900px;
+    background-color:rgb(65,71,91);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.Reg{
+    font-size: 50px;
+    font-weight: 600;
+    color: aliceblue;
+    margin-right: 310px;
+}
+.belowreg{
+    color: aliceblue;
+    width: 600px;
+    gap: 5px;
+    margin: 5px;
+    line-height: 25px;
+}
+.years{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+.oneyears{
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.topyear{
+    color:  rgb(20,189,238);
+    font-weight: 800;
+    font-size: 50px;
+}
+.lowyear{
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+}
+.middleright{
+    width: 400px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}  
+.courcesnow{
+    font-size: 30px;
+    padding: 20px;
+    font-weight: 500;
+    /* color: aliceblue; */
+}  
+.form{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 350px;
+    gap: 20px;
+    color: gray;
+}
+.form input{
+    height: 35px;
+    border: 1px solid lightgray;
+
+}
+.form select{
+    height: 35px;
+    border: 1px solid lightgray;
+
+}
+.form botton{
+background-color:  rgb(20,189,238);
+height: 35px;
+width: 350px;
+display: flex;
+justify-content: center;
+align-items: center;
+color: aliceblue;
+font-weight: 600;
+margin-top: 30px;
 }
