--- a/css1/project1.css
+++ b/css1/project1.css
@@ -498,3 +498,97 @@ color: aliceblue;
 font-weight: 600;
 margin-top: 30px;
 }
+.thirdhalf{
+    height: 600px;
+    background-color: rgb(240,240,240);
+
+}
+.thirdone{
+    height: 100px;
+    width: 700px;
+    background-color: rgb(240,240,240);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 300px;
+    gap: 20px;
+    padding: 20px;
+    margin-top: 10px;
+}
+.thebest{
+    font-size: 40px;
+    font-weight: 600;
+    
+}
+.thebestone{
+    font-size: 15px;
+    display: flex;
+    text-align: center;
+}
+.thirdtwo{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+    display: flex;
+    justify-content: center;
+
+}
+.staff{
+   background-color: rgb(240,240,240);
+    width: 200px;
+    height: 300px;
+}
+.da{
+    height: 180px;
+    background-color: gray;
+    width:100%;
+
+}
+.db{
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+.dc{
+    color: gray;
+    display: flex;
+    justify-content: center;
+}
+.dd{
+    padding:5px ;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    height: 50px;
+    width: 150;
+}
+.de{
+height: 40px;
+width: 40px;
+border-radius: 40px;
+background-image: url(../pics/facebooklogo.jpg);
+background-size: 100% 100%;
+background-repeat: no-repeat;
+
+}
+.df{
+height: 40px;
+width: 40px;
+border-radius: 40px; 
+background-image: url(../pics/google2.jpg);
+background-size: contain;
+background-repeat: no-repeat;
+}
+.dg{
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+    background-image: url(../pics/twitter2.jpg);
+background-size: contain;
+background-repeat: no-repeat;
+}
